# collective-transport

./: .gitignore  CMakeLists.txt  LICENSE.md  NOTES.md  README.md  groot_template.xml  macOS.md
include/: arena.h  bt_custom.h  callbacks.h  common.h  controller.h  draw.h  environment.h  load.h  openGA.hpp  pid.h  robot.h  sim_object.h  utils.h
src/: CMakeLists.txt  arena.cpp  callbacks.cpp  controller.cpp  draw.cpp  environment.cpp  gp.cpp  load.cpp  pid.cpp  robot.cpp  sim_object.cpp  utils.cpp
tests/: CMakeLists.txt  sim.cpp
visualisation/: README.md  plot.sh  script_gnuplot.plg
